--- a/project/src/App.css
+++ b/project/src/App.css
@@ -1,38 +1,20 @@
-.App {
+/*general body style */
+
+
+
+/*button style*/
+
+button {
+  border-width: 1px;
+  border-radius: 10px;
+  padding-inline: 0.5rem;
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
   text-align: center;
+  margin: 0.5rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button:active {
+  background-color: black;
+  color: antiquewhite;
 }
