--- a/project/src/Style/App.scss
+++ b/project/src/Style/App.scss
@@ -1,23 +1,21 @@
-@import '~bootstrap/scss/bootstrap'
+ @import 'custom';
 
-// @import 'custom';
-
-// general body style 
+ // general body style 
 
 
-// button style
+ // button style
 
-// button {
-//   border-width: 1px;
-//   border-radius: 10px;
-//   padding-inline: 0.5rem;
-//   padding-top: 0.25rem;
-//   padding-bottom: 0.25rem;
-//   text-align: center;
-//   margin: 0.5rem;
-// }
+ // button {
+ //   border-width: 1px;
+ //   border-radius: 10px;
+ //   padding-inline: 0.5rem;
+ //   padding-top: 0.25rem;
+ //   padding-bottom: 0.25rem;
+ //   text-align: center;
+ //   margin: 0.5rem;
+ // }
 
-// button:active {
-//   background-color: black;
-//   color: antiquewhite;
-// }
+ // button:active {
+ //   background-color: black;
+ //   color: antiquewhite;
+ // }
